[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totallman"
version = "2.0.0"
description = "Cross-language Tall Man lettering library for medication safety"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ToTallman Contributors" }]
keywords = ["medication", "safety", "tallman", "lettering", "healthcare", "pharmacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
totallman = "totallman.cli:main"

[project.urls]
Repository = "https://github.com/MattCordell/ToTallman"
Issues = "https://github.com/MattCordell/ToTallman/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
totallman = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["UP007"]  # X | Y union requires 3.10+; we use from __future__ import annotations

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
